--- a/src/app/products/product/product.component.html
+++ b/src/app/products/product/product.component.html
@@ -20,7 +20,7 @@
         <div class="row mb-3">
           <div class="price col-auto">$ {{ currentFormat.price }} </div>
         </div>
-        <div class="form-group row">
+        <div class="form-group row" *ngIf="product.format.length > 1">
           <label class="col-lg-2 col-form-label">Formato</label>
           <div class="col-lg-7">
             <select class="form-control" formControlName="format">
