--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -9,7 +9,7 @@
           <fa-icon [icon]="telephone"></fa-icon>&nbsp;+54 11 4861 0450
         </div>
         <div class="px-3">
-          <fa-icon [icon]="envelope"></fa-icon>&nbsp;<a style="color: #212529;" [href]="'mailto:info@queo.com.ar'">info@quadri.com.ar</a>
+          <fa-icon [icon]="envelope"></fa-icon>&nbsp;<a style="color: #212529;" [href]="'mailto:info@queo.com.ar'">info@queo.com.ar</a>
         </div>
       </div>
       <div>
