--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -56,6 +56,7 @@
 
 .text-wrapper {
   padding-bottom: 2rem;
+  padding-left: 3rem;
   max-width: 40%;
 }
 
@@ -121,7 +122,18 @@
 
 	.desktop {
 		display: none;
-	}
+  }
+  
+  .text-wrapper {
+    padding-left: 1rem;
+    padding-bottom: 1rem;
+    max-width: 100%;
+    margin-top: 4rem
+  }
+
+  .oneliner {
+    font-size: 2rem;
+  }
 
 }
 
