--- a/src/app/shared/ui/header/header.component.html
+++ b/src/app/shared/ui/header/header.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg fixed-top bg-transparent" [ngClass]="{'navbar-dark': router.url === '/', 'navbar-light': !(router.url === '/'),'expandedMobile':isExpanded}"
+<nav class="navbar navbar-expand-lg fixed-top bg-transparent" 
+[ngClass]="{'navbar-dark': router.url === '/', 'navbar-light': !(router.url === '/'), 'expandedMobileLndg':isExpanded && router.url === '/', 'expandedMobile':isExpanded && !(router.url === '/')}"
 [@in]="scrollDir">
-<!-- [hidden] = "scrollDir === 'down'" > -->
 
   <a class="navbar-brand" [routerLink]="['/']">
     <img [src]="router.url === '/' ? logoBlanco : logoNegro" width="100" alt="">
@@ -9,7 +9,8 @@
   aria-controls="navbarNav" [attr.aria-expanded]="!isExpanded" aria-label="Toggle navigation" (click)="isExpanded = !isExpanded">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav" [ngbCollapse]="!isExpanded">
+  <div class="collapse navbar-collapse" 
+  id="navbarNav" [ngbCollapse]="!isExpanded">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item" routerLinkActive="active" (click)="isExpanded = false">
         <a class="nav-link" [routerLink]="['/productos']">Productos</a>
