--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -65,7 +65,7 @@
   font-size: 3vw;
   font-weight: 100;
   line-height: 1.6;
-  text-align: start;
+  text-align: center;
 }
 
 .sub-liner {
@@ -77,7 +77,7 @@
 
 .button-wrapper {
   display: block;
-  text-align: start;
+  text-align: center;
 }
 
 .botonComprar {
@@ -109,6 +109,32 @@
 	cursor: pointer;
 }
 
+// video#bgvid { 
+//   position: relative;
+//   top: 50%;
+//   left: 50%;
+//   min-width: 100%;
+//   min-height: 100%;
+//   width: auto;
+//   height: auto;
+//   z-index: 2;
+//   -ms-transform: translateX(-50%) translateY(-50%);
+//   -moz-transform: translateX(-50%) translateY(-50%);
+//   -webkit-transform: translateX(-50%) translateY(-50%);
+//   transform: translateX(-50%) translateY(-50%);
+//   //background: url(polina.jpg) no-repeat;
+//   background-size: cover; 
+// }
+
+video#bgvid { 
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    min-width: 100%; 
+    min-height: 100%;
+    filter: brightness(70%);
+    /* filter: grayscale(100%); */
+}
 
 @media (min-width : 768px) {
 
