--- a/src/app/products/product/product.component.html
+++ b/src/app/products/product/product.component.html
@@ -1,116 +1,132 @@
-<div class="prod-wrapper container" *ngIf="product">
+<div class="prod-wrapper container-fluid p-0" *ngIf="product">
   
-  <div class="row">
+  <div class="py-5 bg-light">
+    <div class="container">
+      <div class="row">
 
-    <div class="prod-imgs col-sm-12 col-md-7">
-      <ngb-carousel #carousel [interval]="0"  [showNavigationArrows]="true" [showNavigationIndicators]="false" (slide)="cambio($event)">
-        <ng-template ngbSlide *ngFor="let img of imgArray" >
-          <div class="carousel-caption">
-            <div class="custom" [ngStyle]="{'background-image': 'url(' + img + ')'}"></div>
-            <div class="spinner-wrapper d-flex align-items-center">
-              <div class="text-center w-100 spinner">
-                <fa-icon class="icons p-3" [icon]="spinner" [spin]="true"></fa-icon>
-              </div>
+        <div class="prod-imgs col-sm-12 col-md-7">
+          <ngb-carousel #carousel [interval]="0"  [showNavigationArrows]="imgArray.length > 1? true : false" [showNavigationIndicators]="false" (slide)="cambio($event)">
+            <ng-template ngbSlide *ngFor="let img of imgArray" >
+              <div class="carousel-caption">
+                <div class="custom" [ngStyle]="{'background-image': 'url(' + img + ')'}"></div>
+                <div class="spinner-wrapper d-flex align-items-center">
+                  <div class="text-center w-100 spinner">
+                    <fa-icon class="icons p-3" [icon]="spinner" [spin]="true"></fa-icon>
+                  </div>
+                </div>
+              </div> 
+            </ng-template>
+          </ngb-carousel>
+        </div>
+
+        <div class="prod-data col-sm-12 col-md-5">
+          <form [formGroup]="buyForm" (ngSubmit)="submit()">
+            <div class="row">
+              <div class="title col-auto">{{ product.name }} </div>
             </div>
-          </div>
-        </ng-template>
-      </ngb-carousel>
-    </div>
-
-    <div class="prod-data col-sm-12 col-md-5">
-      <form [formGroup]="buyForm" (ngSubmit)="submit()">
-        <div class="row">
-          <div class="title col-auto">{{ product.name }} </div>
-        </div>
-        <div class="row mb-3">
-          <div class="price col-auto">$ {{ currentFormat.price }} </div>
-        </div>
-        <div class="form-group row" *ngIf="product.format.length > 1">
-          <label class="col-lg-2 col-form-label">Formato</label>
-          <div class="col-lg-7">
-            <select class="form-control" formControlName="format">
-              <option *ngFor="let formatP of product.format | toArray" [ngValue]="formatP"> {{ formatP.name }} </option>
-            </select>
-          </div>
-        </div>
-        <div class="form-group row" *ngIf="!currentFormat.set">
-          <label class="col-lg-2 col-form-label">Color</label>
-          <div class="col-lg-7">
-            <select class="form-control" formControlName="color">
-              <option *ngFor="let colorObj of currentFormat.colors | toArray" [ngValue]="colorObj"> {{ colorObj.name }} </option>
-            </select>
-          </div>
-        </div>
-        <div *ngIf="currentFormat.set" formArrayName="set">
-          <div *ngFor="let size of setControls.controls; let i=index">
-            <div class="form-group row">
-              <label class="col-lg-2 col-form-label">{{ currentFormat.set.sizes[i] }} </label>
+            <div class="row mb-3">
+              <div class="price col-auto">$ {{ currentFormat.price }} </div>
+            </div>
+            <div class="form-group row" *ngIf="product.format.length > 1">
+   
+   
+              <label class="col-lg-3 col-form-label">Formato</label>
               <div class="col-lg-7">
-                <select class="form-control" [formControlName]="i">
-                  <option *ngFor="let colorObj of currentFormat.colors | toArray" [ngValue]="colorObj"> {{ colorObj.name }} </option>
+                <select class="form-control" formControlName="format">
+                  <option *ngFor="let formatP of product.format | toArray" [ngValue]="formatP"> {{ formatP.name }} </option>
                 </select>
               </div>
             </div>
+            <div class="form-group row" *ngIf="!currentFormat.set">
+              <label class="col-lg-3 col-form-label">Color</label>
+              <div class="col-lg-7">
+                <select class="form-control" formControlName="color">
+                  <option *ngFor="let colorObj of currentFormat.colors | toArray" [ngValue]="colorObj"> {{ colors[colorObj.name].name }} </option>
+                </select>
+              </div>
+            </div>
+            <div *ngIf="currentFormat.set" formArrayName="set">
+              <div *ngFor="let size of setControls.controls; let i=index">
+                <div class="form-group row">
+                  <label class="col-lg-3 col-form-label">{{ currentFormat.set.sizes[i] }} </label>
+                  <div class="col-lg-7">
+                    <select class="form-control" [formControlName]="i">
+                      <option *ngFor="let colorObj of currentFormat.colors | toArray" [ngValue]="colorObj"> {{ colors[colorObj.name].name }} </option>
+                    </select>
+                  </div>
+                </div>
 
-          </div>
+              </div>
+            </div>
+
+            <div class="form-group row">
+              <label class="col-lg-3 col-form-label"> Cantidad </label>
+              <div class="col-auto">
+                <input type="number" class="form-control qty" formControlName="qty">
+              </div>
+            </div>
+
+            <div class="form-group row mt-4">
+              <div class="col-lg-10">
+                <button type="button" class="btn btn-lg botonComprar" (click)= "buy()" [disabled]="!buyForm.valid">Comprar</button>
+              </div>
+            </div>
+
+          </form>
         </div>
-
-        <div class="form-group row">
-          <label class="col-lg-2 col-form-label"> Cantidad </label>
-          <div class="col-auto">
-            <input type="number" class="form-control qty" formControlName="qty">
-          </div>
-        </div>
-
-        <div class="form-group row mt-4">
-          <div class="col-lg-10">
-            <button type="button" class="btn btn-lg botonComprar" (click)= "buy()" [disabled]="!buyForm.valid">Comprar</button>
-          </div>
-        </div>
-
-      </form>
+        
+      </div>
     </div>
   </div>
 
-  <div class="row">
-      <app-blends class="mb-2" [colors]="currentFormat.colors" (selected)="changeColor($event)" ></app-blends>
+  <div class="container">
+      <div class="row">
+        <app-blends class="mb-2" [colors]="currentFormat.colors" (selected)="changeColor($event)" ></app-blends>
+      </div>
   </div>
 
-  <div class="row desc-esp mb-5">
-    <div class="col-12 desc-title mb-4">
-      Descripcion + Especificaciones
+  <div class="py-5 bg-light">
+    <div class="container">
+
+      <div class="row">
+        <div class="col-12 desc-title mb-4">
+          Descripcion + Especificaciones
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12 col-md-6 py-4">
+          <div class="descripcion mb-4">{{ product.text}}</div>
+
+          <div class="dim">
+            Dimensiones:
+            <ul>
+              <li *ngFor="let dim of product.dim">{{ dim }}</li>
+            </ul>
+          </div>
+
+          <div class="weight">
+            Peso:
+            <ul>
+              <li *ngFor="let w of product.weight">{{ w }}</li>
+            </ul>
+          </div>
+
+          <div class="mant mb-3">
+            {{ product.mant }}
+          </div>
+
+          <div class="designer" *ngIf="product.designer">
+            Diseñado por {{ product.designer }}
+          </div>
+        </div>
+      
+        <div class="col-sm-12 col-md-6">
+            <div class="custom" [ngStyle]="{'background-image': 'url(' + product.bgImg + ')'}"></div>
+        </div>
+      </div>
+
     </div>
-
-    <div class="col-sm-12 col-md-6 py-4">
-      <div class="descripcion mb-4">{{ product.text}}</div>
-
-      <div class="dim">
-        Dimensiones:
-        <ul>
-          <li *ngFor="let dim of product.dim">{{ dim }}</li>
-        </ul>
-      </div>
-
-      <div class="weight">
-        Peso:
-        <ul>
-          <li *ngFor="let w of product.weight">{{ w }}</li>
-        </ul>
-      </div>
-
-      <div class="mant mb-3">
-        {{ product.mant }}
-      </div>
-
-      <div class="designer" *ngIf="product.designer">
-        Diseñado por {{ product.designer }}
-      </div>
-
-    </div>
-
-    <div class="col-sm-12 col-md-6">
-        <div class="custom" [ngStyle]="{'background-image': 'url(' + product.bgImg + ')'}"></div>
-    </div>
-
   </div>
+
 </div>
